...
        options={{ href: null }}
      />
      
      <Tabs.Screen
        name="consult"
        options={{
          title: isStylist ? 'Clients' : 'Consult',
          // tabBarTestID: 'tab-consult',
        }}
      />
      <Tabs.Screen
        name="easebot"
        options={{
...
